<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"


    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:textStyle="bold"
        android:textSize="18sp"
        android:padding="10dp"
        android:textColor="@color/black"
        android:fontFamily="monospace"
        android:layout_marginTop="10dp"
        android:text="" />

    <ImageView
        android:contentDescription="@string/img"
        android:id="@+id/ivimg"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_below="@+id/tvTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="2dp"
        app:srcCompat="@drawable/ic_launcher_background" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ivimg"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="2dp"
        android:orientation="horizontal"
        android:id="@+id/linearLayout">
        <Button
            android:id="@+id/btnBuy"
            android:text="@string/buy"
            android:background="@drawable/btn_round_file"
            android:layout_margin="5dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btncompare"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/button_file"
            android:text="@string/shop"
            android:textStyle="bold" />
    </LinearLayout>
    <Button

        android:layout_margin="5dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:text="@string/share"
        android:background="@drawable/button_file"
        android:id="@+id/btnShare"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/btnShare"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="3dp"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:textSize="17sp"
                    android:textStyle="bold"
                    android:text="@string/shop"
                    android:textColor="@color/colorAccent"
                    android:fontFamily="monospace"
                    android:id="@+id/tvDesc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</RelativeLayout>