<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:elevation="15dp"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:elevation="10dp"
        android:id="@+id/FlipkartcardView"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/rl"
            android:padding="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/FlipkartprooImg"
                android:layout_width="140dp"
                android:layout_height="200dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:background="@android:color/background_light" />

            <TextView
                android:id="@+id/FlipkartproTitlee"
                android:paddingLeft="5dp"
                android:text="asd"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:textStyle="bold"
                android:textSize="15sp"
                android:layout_toRightOf="@+id/FlipkartprooImg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/FlipkartproDescc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/FlipkartproTitlee"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_toRightOf="@+id/FlipkartprooImg"
                android:padding="5dp"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/FlipkartproPriceWords"
                android:padding="5dp"
                android:layout_below="@+id/FlipkartproDescc"
                android:text="@string/maxPrice"
                android:layout_toRightOf="@+id/FlipkartprooImg"
                android:layout_marginLeft="7dp"
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/FlipkartproPrice"
                android:padding="5dp"
                android:layout_below="@+id/FlipkartproDescc"
                android:text="@string/strike"
                android:layout_toRightOf="@+id/FlipkartproPriceWords"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:textColor="@color/red_error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />


            <TextView
                android:id="@+id/FlipkartproPriceSellingWords"
                android:padding="3dp"
                android:layout_below="@+id/FlipkartproPriceWords"
                android:text="@string/flipkartSellngPrice"
                android:layout_toRightOf="@+id/FlipkartprooImg"
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/FlipkartproSellingPrice"
                android:padding="3dp"
                android:textColor="@color/red_error"
                android:layout_below="@+id/FlipkartproPrice"
                android:layout_toRightOf="@+id/FlipkartproPriceSellingWords"
                android:text="@string/b"
                android:layout_marginTop="5dp"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <!--<TextView-->
                <!--android:id="@+id/FlipkartproInStock"-->
                <!--android:padding="5dp"-->
                <!--android:layout_below="@+id/FlipkartproSellingPrice"-->
                <!--android:layout_toRightOf="@+id/FlipkartprooImg"-->
                <!--android:layout_marginLeft="10dp"-->
                <!--android:layout_marginTop="5dp"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content" />-->

        </RelativeLayout>


    </android.support.v7.widget.CardView>
</LinearLayout>