<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<RelativeLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:textStyle="bold"
        android:textSize="18sp"
        android:padding="10dp"
        android:textColor="@color/black"
        android:fontFamily="monospace"
        android:layout_marginTop="10dp"
        android:text="" />
    <View
        android:layout_margin="1dp"
        android:layout_below="@+id/tvTitle"
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:background="#c0c0c0"/>
    <ImageView
        android:id="@+id/ivimg"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_below="@+id/tvTitle"
        android:layout_centerHorizontal="true"
        android:layout_margin="2dp"
        android:padding="3dp"
        app:srcCompat="@drawable/ic_launcher_background" />

    <View
        android:layout_margin="2dp"
        android:layout_below="@+id/ivimg"
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:background="#c0c0c0"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ivimg"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="2dp"
        android:orientation="horizontal"
        android:id="@+id/linearLayout"
        android:weightSum="3">
        <Button
            android:id="@+id/btnBuy"
            android:text="@string/buy"
            android:background="@drawable/btn_round_file"
            android:layout_margin="5dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/btnShare"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/button_file"
            android:text="@string/share"
            android:textStyle="bold"
            android:layout_weight="1" />
        <Button
        android:id="@+id/btncompare12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/button_file"
        android:text="Compare Specs"
        android:textStyle="bold"
        android:layout_weight="1"/>
    </LinearLayout>

    <View
        android:id="@+id/vii"
        android:layout_margin="2dp"
        android:layout_below="@+id/linearLayout"
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:background="#c0c0c0"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/vii"
        android:layout_centerHorizontal="true"
        android:orientation="vertical">

                <TextView
                    android:padding="5dp"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:text="@string/shop"
                    android:fontFamily="serif"
                    android:id="@+id/tvDesc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />


    </LinearLayout>

</RelativeLayout>

</ScrollView>